[package]
name = "rust_code"
version = "0.1.0"
edition = "2018"


[dependencies]

cargo-snippet = "0.6.5"

# 参考サイト
# https://paruma184.hatenablog.com/entry/2021/09/22/210945

# AtCoder 2020年言語アップデート以降に使用できるクレート。
# 次のページに各クレートについての細かい紹介があります。
# https://github.com/rust-lang-ja/atcoder-rust-resources/wiki/2020-Update

# 数値型の抽象化、多倍長整数、複素数、分数、及び整数型の拡張
num = "=0.2.1"
num-bigint = "=0.2.6"
num-complex = "=0.2.4"
num-integer = "=0.1.42"
num-iter = "=0.1.40"
num-rational = "=0.2.4"
num-traits = "=0.2.11"

# `num-traits`の自動実装
num-derive = "=0.3.0"

# NumPyの`ndarray`のような多次元配列
ndarray = "=0.13.0"

# 線形代数
nalgebra = "=0.20.0"

# (線形)代数の抽象化
alga = "=0.9.3"

# libmのRust実装
libm = "=0.2.1"

# 乱数
rand = { version = "=0.7.3", features = ["small_rng"] }
getrandom = "=0.1.14"
rand_chacha = "=0.2.2"
rand_core = "=0.5.1"
rand_hc = "=0.2.0"
rand_pcg = "=0.2.1"

# 乱数の分布の追加
rand_distr = "=0.2.2"

# グラフ
petgraph = "=0.5.0"

# 挿入順を保持するhash table
indexmap = "=1.3.2"

# 正規表現
regex = "=1.3.6"

# staticアイテムの遅延初期化
lazy_static = "=1.4.0"

# `NotNan<f64>`, `OrderedFloat<f64>`
ordered-float = "=1.0.2"

# ASCII文字列
ascii = "=1.0.0"

# permutation
permutohedron = "=0.2.4"

# スライスの拡張
superslice = "=1.0.0"

# イテレータの拡張
itertools = "=0.9.0"

# イテレータの拡張（一次元累積和と浮動小数点数の等差数列）
itertools-num = "=0.1.3"

# `BTreeMap`, `BTreeSet`, `HashMap`, `HashSet`のリテラル用マクロ
maplit = "=1.0.2"

# 即席enum `Either<L, R>`
either = "=1.5.3"

# `BTreeMap`, `BTreeSet`, `HashMap`, `HashSet`, `Vec`の永続データ構造版
im-rc = "=14.3.0"

# 可変長bit set
fixedbitset = "=0.2.0"

# 可変長bit set
bitset-fixed = "=0.1.0"

# 競技プログラミングの入出力サポートその1
proconio = { version = "=0.3.6", features = ["derive"] }

# 競技プログラミングの入出力サポートその2
text_io = "=0.1.8"

# 競技プログラミングの入出力サポートその3
whiteread = "=0.5.0"

# 高速なハッシュ関数
rustc-hash = "=1.1.0"

# ある長さまでは要素を「直に」持つ可変長配列
smallvec = "=1.2.0"

# ---------------------------------------------------------------------

[dev-dependencies]
cli_test_dir = "0.1"

[[bin]]
name = "src_main"
path = "./src/main.rs"


[[bin]]
name = "abc268_b"
path = "./src/abc268/b.rs"


[[bin]]
name = "abc268_g"
path = "./src/abc268/g.rs"


[[bin]]
name = "abc268__ex"
path = "./src/abc268/_ex.rs"


[[bin]]
name = "abc268_a"
path = "./src/abc268/a.rs"


[[bin]]
name = "abc268_f"
path = "./src/abc268/f.rs"


[[bin]]
name = "abc268_c"
path = "./src/abc268/c.rs"


[[bin]]
name = "abc268_d"
path = "./src/abc268/d.rs"


[[bin]]
name = "abc268_e"
path = "./src/abc268/e.rs"


[[bin]]
name = "abc264_b"
path = "./src/abc264/b.rs"


[[bin]]
name = "abc264_a"
path = "./src/abc264/a.rs"


[[bin]]
name = "abc264_c"
path = "./src/abc264/c.rs"


[[bin]]
name = "abc264_d"
path = "./src/abc264/d.rs"


[[bin]]
name = "permutation_search_abc145c"
path = "./src/seisen100/full_search/permutation_search/abc145c.rs"


[[bin]]
name = "permutation_search_aoj_8queen_problem"
path = "./src/seisen100/full_search/permutation_search/aoj_8queen_problem.rs"


[[bin]]
name = "permutation_search_abc150c"
path = "./src/seisen100/full_search/permutation_search/abc150c.rs"


[[bin]]
name = "full_enumeration_joi2998d"
path = "./src/seisen100/full_search/full_enumeration/joi2998d.rs"


[[bin]]
name = "full_enumeration_sumishin2019d"
path = "./src/seisen100/full_search/full_enumeration/sumishin2019d.rs"


[[bin]]
name = "full_enumeration_pken2019c"
path = "./src/seisen100/full_search/full_enumeration/pken2019c.rs"


[[bin]]
name = "full_enumeration_joi2007c"
path = "./src/seisen100/full_search/full_enumeration/joi2007c.rs"


[[bin]]
name = "full_enumeration_095c"
path = "./src/seisen100/full_search/full_enumeration/095c.rs"


[[bin]]
name = "full_enumeration_106b"
path = "./src/seisen100/full_search/full_enumeration/106b.rs"


[[bin]]
name = "full_enumeration_122b"
path = "./src/seisen100/full_search/full_enumeration/122b.rs"


[[bin]]
name = "full_enumeration_square869120b"
path = "./src/seisen100/full_search/full_enumeration/square869120b.rs"


[[bin]]
name = "bit_full_search_abc128"
path = "./src/seisen100/full_search/bit_full_search/abc128.rs"


[[bin]]
name = "bit_full_search_abc002d"
path = "./src/seisen100/full_search/bit_full_search/abc002d.rs"


[[bin]]
name = "bit_full_search_joi07e"
path = "./src/seisen100/full_search/bit_full_search/joi07e.rs"


[[bin]]
name = "bit_full_search_square869120_b"
path = "./src/seisen100/full_search/bit_full_search/square869120_b.rs"


[[bin]]
name = "bit_full_search_ALDS1_5_A"
path = "./src/seisen100/full_search/bit_full_search/ALDS1_5_A.rs"


[[bin]]
name = "binary_search_ALDS1_4_B"
path = "./src/seisen100/binary_search/ALDS1_4_B.rs"


[[bin]]
name = "abc243_b"
path = "./src/abc243/b.rs"


[[bin]]
name = "abc243_g"
path = "./src/abc243/g.rs"


[[bin]]
name = "abc243__ex"
path = "./src/abc243/_ex.rs"


[[bin]]
name = "abc243_a"
path = "./src/abc243/a.rs"


[[bin]]
name = "abc243_f"
path = "./src/abc243/f.rs"


[[bin]]
name = "abc243_c"
path = "./src/abc243/c.rs"


[[bin]]
name = "abc243_d"
path = "./src/abc243/d.rs"


[[bin]]
name = "abc243_e"
path = "./src/abc243/e.rs"


[[bin]]
name = "abc273_b"
path = "./src/abc273/b.rs"


[[bin]]
name = "abc273_g"
path = "./src/abc273/g.rs"


[[bin]]
name = "abc273__ex"
path = "./src/abc273/_ex.rs"


[[bin]]
name = "abc273_a"
path = "./src/abc273/a.rs"


[[bin]]
name = "abc273_f"
path = "./src/abc273/f.rs"


[[bin]]
name = "abc273_c"
path = "./src/abc273/c.rs"


[[bin]]
name = "abc273_d"
path = "./src/abc273/d.rs"


[[bin]]
name = "abc273_e"
path = "./src/abc273/e.rs"


[[bin]]
name = "abc262_b"
path = "./src/abc262/b.rs"


[[bin]]
name = "abc262_a"
path = "./src/abc262/a.rs"


[[bin]]
name = "abc262_c"
path = "./src/abc262/c.rs"


[[bin]]
name = "abc096_b"
path = "./src/abc096/b.rs"


[[bin]]
name = "abc096_g"
path = "./src/abc096/g.rs"


[[bin]]
name = "abc096__ex"
path = "./src/abc096/_ex.rs"


[[bin]]
name = "abc096_a"
path = "./src/abc096/a.rs"


[[bin]]
name = "abc096_f"
path = "./src/abc096/f.rs"


[[bin]]
name = "abc096_c"
path = "./src/abc096/c.rs"


[[bin]]
name = "abc096_d"
path = "./src/abc096/d.rs"


[[bin]]
name = "abc096_e"
path = "./src/abc096/e.rs"


[[bin]]
name = "abc284_b"
path = "./src/abc284/b.rs"


[[bin]]
name = "abc284_g"
path = "./src/abc284/g.rs"


[[bin]]
name = "abc284__ex"
path = "./src/abc284/_ex.rs"


[[bin]]
name = "abc284_a"
path = "./src/abc284/a.rs"


[[bin]]
name = "abc284_f"
path = "./src/abc284/f.rs"


[[bin]]
name = "abc284_c"
path = "./src/abc284/c.rs"


[[bin]]
name = "abc284_d"
path = "./src/abc284/d.rs"


[[bin]]
name = "abc284_e"
path = "./src/abc284/e.rs"


[[bin]]
name = "abc277_b"
path = "./src/abc277/b.rs"


[[bin]]
name = "abc277_g"
path = "./src/abc277/g.rs"


[[bin]]
name = "abc277__ex"
path = "./src/abc277/_ex.rs"


[[bin]]
name = "abc277_a"
path = "./src/abc277/a.rs"


[[bin]]
name = "abc277_f"
path = "./src/abc277/f.rs"


[[bin]]
name = "abc277_c"
path = "./src/abc277/c.rs"


[[bin]]
name = "abc277_d"
path = "./src/abc277/d.rs"


[[bin]]
name = "abc277_e"
path = "./src/abc277/e.rs"


[[bin]]
name = "abc276_b"
path = "./src/abc276/b.rs"


[[bin]]
name = "abc276_g"
path = "./src/abc276/g.rs"


[[bin]]
name = "abc276__ex"
path = "./src/abc276/_ex.rs"


[[bin]]
name = "abc276_a"
path = "./src/abc276/a.rs"


[[bin]]
name = "abc276_f"
path = "./src/abc276/f.rs"


[[bin]]
name = "abc276_c"
path = "./src/abc276/c.rs"


[[bin]]
name = "abc276_d"
path = "./src/abc276/d.rs"


[[bin]]
name = "abc276_e"
path = "./src/abc276/e.rs"


[[bin]]
name = "abc267_b"
path = "./src/abc267/b.rs"


[[bin]]
name = "abc267_g"
path = "./src/abc267/g.rs"


[[bin]]
name = "abc267__ex"
path = "./src/abc267/_ex.rs"


[[bin]]
name = "abc267_a"
path = "./src/abc267/a.rs"


[[bin]]
name = "abc267_f"
path = "./src/abc267/f.rs"


[[bin]]
name = "abc267_c"
path = "./src/abc267/c.rs"


[[bin]]
name = "abc267_d"
path = "./src/abc267/d.rs"


[[bin]]
name = "abc267_e"
path = "./src/abc267/e.rs"


[[bin]]
name = "agc021_b"
path = "./src/agc021/b.rs"


[[bin]]
name = "agc021_g"
path = "./src/agc021/g.rs"


[[bin]]
name = "agc021__ex"
path = "./src/agc021/_ex.rs"


[[bin]]
name = "agc021_a"
path = "./src/agc021/a.rs"


[[bin]]
name = "agc021_f"
path = "./src/agc021/f.rs"


[[bin]]
name = "agc021_c"
path = "./src/agc021/c.rs"


[[bin]]
name = "agc021_d"
path = "./src/agc021/d.rs"


[[bin]]
name = "agc021_e"
path = "./src/agc021/e.rs"


[[bin]]
name = "abc275_b"
path = "./src/abc275/b.rs"


[[bin]]
name = "abc275_g"
path = "./src/abc275/g.rs"


[[bin]]
name = "abc275__ex"
path = "./src/abc275/_ex.rs"


[[bin]]
name = "abc275_a"
path = "./src/abc275/a.rs"


[[bin]]
name = "abc275_f"
path = "./src/abc275/f.rs"


[[bin]]
name = "abc275_c"
path = "./src/abc275/c.rs"


[[bin]]
name = "abc275_d"
path = "./src/abc275/d.rs"


[[bin]]
name = "abc275_e"
path = "./src/abc275/e.rs"


[[bin]]
name = "abc207_b"
path = "./src/abc207/b.rs"


[[bin]]
name = "abc207_g"
path = "./src/abc207/g.rs"


[[bin]]
name = "abc207__ex"
path = "./src/abc207/_ex.rs"


[[bin]]
name = "abc207_a"
path = "./src/abc207/a.rs"


[[bin]]
name = "abc207_f"
path = "./src/abc207/f.rs"


[[bin]]
name = "abc207_c"
path = "./src/abc207/c.rs"


[[bin]]
name = "abc207_d"
path = "./src/abc207/d.rs"


[[bin]]
name = "abc207_e"
path = "./src/abc207/e.rs"


[[bin]]
name = "abc280_b"
path = "./src/abc280/b.rs"


[[bin]]
name = "abc280_g"
path = "./src/abc280/g.rs"


[[bin]]
name = "abc280__ex"
path = "./src/abc280/_ex.rs"


[[bin]]
name = "abc280_a"
path = "./src/abc280/a.rs"


[[bin]]
name = "abc280_f"
path = "./src/abc280/f.rs"


[[bin]]
name = "abc280_c"
path = "./src/abc280/c.rs"


[[bin]]
name = "abc280_d"
path = "./src/abc280/d.rs"


[[bin]]
name = "abc280_e"
path = "./src/abc280/e.rs"


[[bin]]
name = "abc274_b"
path = "./src/abc274/b.rs"


[[bin]]
name = "abc274_g"
path = "./src/abc274/g.rs"


[[bin]]
name = "abc274__ex"
path = "./src/abc274/_ex.rs"


[[bin]]
name = "abc274_a"
path = "./src/abc274/a.rs"


[[bin]]
name = "abc274_f"
path = "./src/abc274/f.rs"


[[bin]]
name = "abc274_c"
path = "./src/abc274/c.rs"


[[bin]]
name = "abc274_d"
path = "./src/abc274/d.rs"


[[bin]]
name = "abc274_e"
path = "./src/abc274/e.rs"


[[bin]]
name = "abc072_b"
path = "./src/abc072/b.rs"


[[bin]]
name = "abc072_g"
path = "./src/abc072/g.rs"


[[bin]]
name = "abc072__ex"
path = "./src/abc072/_ex.rs"


[[bin]]
name = "abc072_a"
path = "./src/abc072/a.rs"


[[bin]]
name = "abc072_f"
path = "./src/abc072/f.rs"


[[bin]]
name = "abc072_c"
path = "./src/abc072/c.rs"


[[bin]]
name = "abc072_d"
path = "./src/abc072/d.rs"


[[bin]]
name = "abc072_e"
path = "./src/abc072/e.rs"


[[bin]]
name = "abc271_b"
path = "./src/abc271/b.rs"


[[bin]]
name = "abc271_g"
path = "./src/abc271/g.rs"


[[bin]]
name = "abc271__ex"
path = "./src/abc271/_ex.rs"


[[bin]]
name = "abc271_a"
path = "./src/abc271/a.rs"


[[bin]]
name = "abc271_f"
path = "./src/abc271/f.rs"


[[bin]]
name = "abc271_c"
path = "./src/abc271/c.rs"


[[bin]]
name = "abc271_d"
path = "./src/abc271/d.rs"


[[bin]]
name = "abc271_e"
path = "./src/abc271/e.rs"


[[bin]]
name = "abc263_b"
path = "./src/abc263/b.rs"


[[bin]]
name = "abc263_a"
path = "./src/abc263/a.rs"


[[bin]]
name = "abc263_c"
path = "./src/abc263/c.rs"


[[bin]]
name = "abc263_d"
path = "./src/abc263/d.rs"


[[bin]]
name = "abc263_e"
path = "./src/abc263/e.rs"


[[bin]]
name = "abc272_b"
path = "./src/abc272/b.rs"


[[bin]]
name = "abc272_g"
path = "./src/abc272/g.rs"


[[bin]]
name = "abc272__ex"
path = "./src/abc272/_ex.rs"


[[bin]]
name = "abc272_a"
path = "./src/abc272/a.rs"


[[bin]]
name = "abc272_f"
path = "./src/abc272/f.rs"


[[bin]]
name = "abc272_c"
path = "./src/abc272/c.rs"


[[bin]]
name = "abc272_d"
path = "./src/abc272/d.rs"


[[bin]]
name = "abc272_e"
path = "./src/abc272/e.rs"


[[bin]]
name = "abc086_b"
path = "./src/abc086/b.rs"


[[bin]]
name = "abc086_g"
path = "./src/abc086/g.rs"


[[bin]]
name = "abc086__ex"
path = "./src/abc086/_ex.rs"


[[bin]]
name = "abc086_a"
path = "./src/abc086/a.rs"


[[bin]]
name = "abc086_f"
path = "./src/abc086/f.rs"


[[bin]]
name = "abc086_c"
path = "./src/abc086/c.rs"


[[bin]]
name = "abc086_d"
path = "./src/abc086/d.rs"


[[bin]]
name = "abc086_e"
path = "./src/abc086/e.rs"


[[bin]]
name = "abc265_b"
path = "./src/abc265/b.rs"


[[bin]]
name = "abc265_g"
path = "./src/abc265/g.rs"


[[bin]]
name = "abc265__ex"
path = "./src/abc265/_ex.rs"


[[bin]]
name = "abc265_a"
path = "./src/abc265/a.rs"


[[bin]]
name = "abc265_f"
path = "./src/abc265/f.rs"


[[bin]]
name = "abc265_c"
path = "./src/abc265/c.rs"


[[bin]]
name = "abc265_d"
path = "./src/abc265/d.rs"


[[bin]]
name = "abc265_e"
path = "./src/abc265/e.rs"


[[bin]]
name = "100_abc042a"
path = "./src/atcoder_scores/100/abc042a.rs"


[[bin]]
name = "100_abc043a"
path = "./src/atcoder_scores/100/abc043a.rs"


[[bin]]
name = "abc282_b"
path = "./src/abc282/b.rs"


[[bin]]
name = "abc282_g"
path = "./src/abc282/g.rs"


[[bin]]
name = "abc282__ex"
path = "./src/abc282/_ex.rs"


[[bin]]
name = "abc282_a"
path = "./src/abc282/a.rs"


[[bin]]
name = "abc282_f"
path = "./src/abc282/f.rs"


[[bin]]
name = "abc282_c"
path = "./src/abc282/c.rs"


[[bin]]
name = "abc282_d"
path = "./src/abc282/d.rs"


[[bin]]
name = "abc282_e"
path = "./src/abc282/e.rs"


[[bin]]
name = "abc245_b"
path = "./src/abc245/b.rs"


[[bin]]
name = "abc245_g"
path = "./src/abc245/g.rs"


[[bin]]
name = "abc245__ex"
path = "./src/abc245/_ex.rs"


[[bin]]
name = "abc245_a"
path = "./src/abc245/a.rs"


[[bin]]
name = "abc245_f"
path = "./src/abc245/f.rs"


[[bin]]
name = "abc245_c"
path = "./src/abc245/c.rs"


[[bin]]
name = "abc245_d"
path = "./src/abc245/d.rs"


[[bin]]
name = "abc245_e"
path = "./src/abc245/e.rs"


[[bin]]
name = "abc266_b"
path = "./src/abc266/b.rs"


[[bin]]
name = "abc266_g"
path = "./src/abc266/g.rs"


[[bin]]
name = "abc266__ex"
path = "./src/abc266/_ex.rs"


[[bin]]
name = "abc266_a"
path = "./src/abc266/a.rs"


[[bin]]
name = "abc266_f"
path = "./src/abc266/f.rs"


[[bin]]
name = "abc266_c"
path = "./src/abc266/c.rs"


[[bin]]
name = "abc266_d"
path = "./src/abc266/d.rs"


[[bin]]
name = "abc266_e"
path = "./src/abc266/e.rs"


[[bin]]
name = "abc281_b"
path = "./src/abc281/b.rs"


[[bin]]
name = "abc281_g"
path = "./src/abc281/g.rs"


[[bin]]
name = "abc281__ex"
path = "./src/abc281/_ex.rs"


[[bin]]
name = "abc281_a"
path = "./src/abc281/a.rs"


[[bin]]
name = "abc281_f"
path = "./src/abc281/f.rs"


[[bin]]
name = "abc281_c"
path = "./src/abc281/c.rs"


[[bin]]
name = "abc281_d"
path = "./src/abc281/d.rs"


[[bin]]
name = "abc281_e"
path = "./src/abc281/e.rs"


[[bin]]
name = "abc270_b"
path = "./src/abc270/b.rs"


[[bin]]
name = "abc270_g"
path = "./src/abc270/g.rs"


[[bin]]
name = "abc270__ex"
path = "./src/abc270/_ex.rs"


[[bin]]
name = "abc270_a"
path = "./src/abc270/a.rs"


[[bin]]
name = "abc270_f"
path = "./src/abc270/f.rs"


[[bin]]
name = "abc270_c"
path = "./src/abc270/c.rs"


[[bin]]
name = "abc270_d"
path = "./src/abc270/d.rs"


[[bin]]
name = "abc270_e"
path = "./src/abc270/e.rs"


[[bin]]
name = "abc279_b"
path = "./src/abc279/b.rs"


[[bin]]
name = "abc279_g"
path = "./src/abc279/g.rs"


[[bin]]
name = "abc279__ex"
path = "./src/abc279/_ex.rs"


[[bin]]
name = "abc279_a"
path = "./src/abc279/a.rs"


[[bin]]
name = "abc279_f"
path = "./src/abc279/f.rs"


[[bin]]
name = "abc279_c"
path = "./src/abc279/c.rs"


[[bin]]
name = "abc279_d"
path = "./src/abc279/d.rs"


[[bin]]
name = "abc279_e"
path = "./src/abc279/e.rs"


[[bin]]
name = "abc269_b"
path = "./src/abc269/b.rs"


[[bin]]
name = "abc269_g"
path = "./src/abc269/g.rs"


[[bin]]
name = "abc269__ex"
path = "./src/abc269/_ex.rs"


[[bin]]
name = "abc269_a"
path = "./src/abc269/a.rs"


[[bin]]
name = "abc269_f"
path = "./src/abc269/f.rs"


[[bin]]
name = "abc269_c"
path = "./src/abc269/c.rs"


[[bin]]
name = "abc269_d"
path = "./src/abc269/d.rs"


[[bin]]
name = "abc269_e"
path = "./src/abc269/e.rs"


[[bin]]
name = "arc011_b"
path = "./src/arc011/b.rs"


[[bin]]
name = "arc011_g"
path = "./src/arc011/g.rs"


[[bin]]
name = "arc011__ex"
path = "./src/arc011/_ex.rs"


[[bin]]
name = "arc011_a"
path = "./src/arc011/a.rs"


[[bin]]
name = "arc011_f"
path = "./src/arc011/f.rs"


[[bin]]
name = "arc011_c"
path = "./src/arc011/c.rs"


[[bin]]
name = "arc011_d"
path = "./src/arc011/d.rs"


[[bin]]
name = "arc011_e"
path = "./src/arc011/e.rs"


[[bin]]
name = "sandbox_hash_vs_vec"
path = "./src/sandbox/hash_vs_vec.rs"
